[package]
name = "stardex"
version = "0.1.0"
edition = "2021"

[dependencies]
ahash = { version = "0.8.11", features = ["serde"] }
# gloo = { version = "0.11.0", features = ["console", "utils"], default-features = false }
implicit-clone = { version = "0.4.8", features = ["map", "serde"] }
indexmap = { version = "2.4.0", features = ["serde"] }
serde = { version = "1.0.208", features = ["derive"] }
toml = { version = "0.8.19", features = ["preserve_order"] }
wasm-bindgen = "0.2.93"
web-sys = { version = "0.3.70", features = ["DomTokenList", "Element"] }
yew = { version = "0.21.0", features = ["csr"] }
yew-router = "0.18.0"
